fixed: rm scrollbar, focus after enter, ctr+a

--- a/src/less/selectize.less
+++ b/src/less/selectize.less
@@ -187,6 +187,7 @@
 	> textarea {
 		resize: none;
 		height: 18px;
+		overflow:hidden;
 	}
 }
 
